# embui

./: Cargo.toml
examples/: basic.rs  layout.rs  widget_tree.rs
src/: lib.rs  screen.rs
src/events/: input.rs
src/layout/: mod.rs
src/themes/: colors.rs  mod.rs  theme.rs
src/widgets/: button.rs  container.rs  mod.rs  number.rs  state.rs  widget.rs
