[package]
name = "embui"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-text = { version = "0.7.2", features = ["plugin", "ansi"] }
embedded-graphics = "0.8.0"
embedded-graphics-simulator = "0.7.0"
embedded-layout = { path = "../embedded-layout/" }

heapless = { version = "0.8.0", features = [
  "portable-atomic-critical-section",
] }
